Submit possibly final version before deadline
It's unfinished, for now.

Unimplemented:
- Order PUT api.
- Order GET all and GET one still buggy and unfinished.
- No email service.

Hopefully I didn't miss more.
